--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -15918,7 +15918,7 @@ ol,ul {
 }
 
 .categories {
-    background: #f3f2ee;
+    background: #96111f;
     overflow: hidden;
     padding-top: 150px;
     padding-bottom: 125px
@@ -16604,7 +16604,7 @@ ol,ul {
 
 .product__details__pic {
     text-align: center;
-    background: #f3f2ee;
+    background: #96111f;
     padding: 40px 0 60px;
     margin-bottom: 100px
 }
@@ -17132,7 +17132,7 @@ ol,ul {
 }
 
 .breadcrumb-option {
-    background: #f3f2ee;
+    background: #96111f;
     padding: 40px 0
 }
 
@@ -17205,7 +17205,7 @@ ol,ul {
 }
 
 .testimonial {
-    background: #f3f2ee
+    background: #96111f
 }
 
 .testimonial__text {
@@ -17425,7 +17425,7 @@ ol,ul {
     color: #111;
     height: 40px;
     width: 40px;
-    background: #f3f2ee;
+    background: #96111f;
     border-radius: 50%;
     line-height: 40px;
     text-align: center
@@ -17512,7 +17512,7 @@ ol,ul {
 }
 
 .cart__total {
-    background: #f3f2ee;
+    background: #96111f;
     padding: 35px 40px 40px
 }
 
@@ -17667,7 +17667,7 @@ ol,ul {
 }
 
 .checkout__order {
-    background: #f3f2ee;
+    background: #96111f;
     padding: 30px
 }
 
@@ -17917,7 +17917,7 @@ ol,ul {
 }
 
 .blog-hero {
-    background: #f3f2ee;
+    background: #96111f;
     padding-top: 125px;
     padding-bottom: 190px
 }
@@ -18031,7 +18031,7 @@ ol,ul {
 }
 
 .blog__details__quote {
-    background: #f3f2ee;
+    background: #96111f;
     padding: 50px 40px 35px;
     border-radius: 5px;
     position: relative;
